[package]
name = "granny"
version = "0.0.2"
license = "MIT"
authors = ["3442853561<3442853561@qq.com>"]
keywords = ["computing", "scientific"]

description = "Granny is the crate for scientific computing with Rust"
repository = "https://github.com/RustDream/Granny"

[lib]
name = "granny"
path = "./src/lib.rs"

[[bin]]
name = "main"
path = "./src/examples/main.rs"
